@@ -30,14 +30,13 @@ import socket
 class CSocket:
 	
 	END_STRING = "<F2B_END_COMMAND>"
-	SOCKET_FILE = "/tmp/fail2ban.sock"
 	
-	def __init__(self):
+	def __init__(self, sock = "/tmp/fail2ban.sock"):
 		# Create an INET, STREAMing socket
 		#self.csock = socket.socket(socket.AF_INET, socket.SOCK_STREAM)
 		self.__csock = socket.socket(socket.AF_UNIX, socket.SOCK_STREAM)
 		#self.csock.connect(("localhost", 2222))
-		self.__csock.connect(CSocket.SOCKET_FILE)
+		self.__csock.connect(sock)
 	
 	def send(self, msg):
 		# Convert every list member to string
