@@ -13,6 +13,9 @@ and bans the corresponding IP addresses using firewall rules.
 \fB\-c\fR <DIR>
 configuration directory
 .TP
+\fB\-s\fR <FILE>
+socket path
+.TP
 \fB\-d\fR
 dump configuration. For debugging
 .TP
