@@ -19,6 +19,9 @@ start in background
 \fB\-f\fR
 start in foreground
 .TP
+\fB\-s\fR <FILE>
+socket path
+.TP
 \fB\-x\fR
 force execution of the server
 .TP
